Fix right padding issue with reviews on mobile

--- a/app/styles/reviews.css
+++ b/app/styles/reviews.css
@@ -51,6 +51,7 @@
   left: 0;
   right: 0;
   padding-left: 1rem;
+  padding-right: 1rem;
   background: rgba(0,0,0,0.75);
   color: white;
   transform: translateY(100%);
